--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
 TELEGRAM_TOKEN=your_token_here
 TELEGRAM_CHAT_ID=your_chat_id_here
+IDEALISTA_API_KEY=your_api_key_here
+IDEALISTA_API_SECRET=your_api_secret_here
